interview text brush up commit